--- a/pavasaris.html
+++ b/pavasaris.html
@@ -52,5 +52,7 @@
                 </div>
             </div>
         </article>
+        <div class="falling-leaves"></div>
+        <script src="/scripts/pavasaris.js"></script>
     </body>
 </html>
