--- a/vasara.html
+++ b/vasara.html
@@ -52,5 +52,6 @@
                 </div>
             </div>
         </article>
+        <script src="/scripts/vasara.js"></script>
     </body>
 </html>
