--- a/ziema.html
+++ b/ziema.html
@@ -52,5 +52,9 @@
                 </div>
             </div>
         </article>
+        <div id="snowflakeContainer">
+            <span class="snowflake"></span>
+        </div>
+        <script src="/scripts/ziema.js"></script>
     </body>
 </html>
