--- a/rudens.html
+++ b/rudens.html
@@ -52,6 +52,9 @@
                 </div>
             </div>
         </article>
+        <div id="box">
+            <canvas id="canvas" width="" height=""></canvas>
+        </div>
         <script src="/scripts/rudens.js"></script>
     </body>
 </html>
