--- a/pavasaris.html
+++ b/pavasaris.html
@@ -16,15 +16,10 @@
         <article>
             <div class="card-main-content">
                 <h1>Pavasaris</h1>
-                <!-- <img
-                    class="gadalaiki"
-                    src="bildes/gadalaiki.png"
-                    alt="Gadalaiki"
-                /> -->
                 <img
                     class="picture"
                     src="https://images.unsplash.com/photo-1544726368-8f4b5475a7e4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
-                    alt="Gadalaiki"
+                    alt="Pavasaris"
                 />
                 <div class="card-main">
                     <blockquote cite="https://lv.wikipedia.org/wiki/Pavasaris">
@@ -53,6 +48,6 @@
             </div>
         </article>
         <div class="falling-leaves"></div>
-        <script src="/scripts/pavasaris.js"></script>
     </body>
+    <script src="/scripts/pavasaris.js"></script>
 </html>
