--- a/index.html
+++ b/index.html
@@ -21,14 +21,9 @@
                 <h1>Gadalaiki</h1>
                 <img
                     class="picture"
-                    src="bildes/gadalaiki.png"
+                    src="bildes/gadalaiki.webp"
                     alt="Gadalaiki"
                 />
-                <!-- <img
-                    class="gadalaiki"
-                    src="https://images.unsplash.com/photo-1510797215324-95aa89f43c33?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=735&q=80"
-                    alt="Gadalaiki"
-                /> -->
                 <div class="card-main">
                     <blockquote cite="https://lv.wikipedia.org/wiki/Gadalaiks">
                         Gadalaiks jeb gadskārta ir gada daļa, kurai raksturīgi
