--- a/rudens.html
+++ b/rudens.html
@@ -16,15 +16,10 @@
         <article>
             <div class="card-main-content">
                 <h1>Rudens</h1>
-                <!-- <img
-                    class="gadalaiki"
-                    src="bildes/gadalaiki.png"
-                    alt="Gadalaiki"
-                /> -->
                 <img
                     class="picture"
                     src="https://images.unsplash.com/photo-1508264165352-258db2ebd59b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=688&q=80"
-                    alt="Gadalaiki"
+                    alt="Rudens"
                 />
                 <div class="card-main">
                     <blockquote cite="https://lv.wikipedia.org/wiki/Rudens">
