--- a/ziema.html
+++ b/ziema.html
@@ -16,15 +16,10 @@
         <article>
             <div class="card-main-content">
                 <h1>Ziema</h1>
-                <!-- <img
-                    class="gadalaiki"
-                    src="bildes/gadalaiki.png"
-                    alt="Gadalaiki"
-                /> -->
                 <img
                     class="picture"
                     src="https://images.unsplash.com/photo-1519749163903-90027c6224bb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
-                    alt="Gadalaiki"
+                    alt="Ziema"
                 />
                 <div class="card-main">
                     <blockquote cite="https://lv.wikipedia.org/wiki/Ziema">
