--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
         <meta name="author" content="Linards" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            rel="icon"
+            type="image/x-ico"
+            sizes="16x16"
+            href="bildes/favicon.ico"
+        />
         <link rel="stylesheet" href="app.css" />
+
         <title>Gadalaiki</title>
     </head>
     <body>
